RESOLVED FIXED 243525
Fix rounding for rgb channels in parseColorIntOrPercentage
https://bugs.webkit.org/show_bug.cgi?id=243525
Summary Fix rounding for rgb channels in parseColorIntOrPercentage
Tim Nguyen (:ntim)
Reported 2022-08-03 18:35:57 PDT
css/css-color/t422-rgba-a0.6-a.xht css/css-color/t422-rgba-onscreen-b.xht css/css-color/t422-rgba-onscreen-multiple-boxes-c.xht css/css-color/t425-hsla-basic-a.xht css/css-color/t425-hsla-onscreen-b.xht css/css-color/t425-hsla-onscreen-multiple-boxes-c.xht "Test that rgba() does not behave like opacity and draw in an offscreen buffer." is the assert that comes up in those tests.
Attachments
Radar WebKit Bug Importer
Comment 1 2022-08-03 18:36:16 PDT
Tim Nguyen (:ntim)
Comment 2 2022-10-20 13:11:35 PDT
css/css-color/t425-hsla-basic-a.xht was fixed as part of https://github.com/web-platform-tests/wpt/pull/36575
Tim Nguyen (:ntim)
Comment 3 2022-10-20 13:48:06 PDT
css/css-color/t422-rgba-a0.6-a.xht was fixed by https://github.com/web-platform-tests/wpt/pull/36577
Tim Nguyen (:ntim)
Comment 4 2022-10-20 23:19:54 PDT
EWS
Comment 5 2022-10-21 14:04:07 PDT
Committed 255848@main (8070eaf88efe): <https://commits.webkit.org/255848@main> Reviewed commits have been landed. Closing PR #5623 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.