Fix rounding for rgb channels in parseColorIntOrPercentage https://bugs.webkit.org/show_bug.cgi?id=243525 rdar://98091263

Reviewed by Cameron McCormack.

The rounding used by parseNonRelativeRGBParameters (used for new color syntax and for parsing cssText) is already correct.
Unfortunately, parseNumericColor, used as a fast path to parse rgb/rgba colors uses incorrect rounding (just does a plain conversion to uint8_t).

* LayoutTests/TestExpectations:
* LayoutTests/fast/canvas/rgba-parsing-expected.txt:
* LayoutTests/fast/canvas/rgba-parsing.html:
* LayoutTests/imported/w3c/web-platform-tests/css/css-color/parsing/color-computed-rgb-expected.txt:
* LayoutTests/platform/glib/TestExpectations:
* LayoutTests/platform/glib/imported/w3c/web-platform-tests/svg/import/color-prop-02-f-manual-expected.txt:
* LayoutTests/platform/glib/imported/w3c/web-platform-tests/svg/import/color-prop-03-t-manual-expected.txt:
* LayoutTests/platform/glib/svg/W3C-SVG-1.1/color-prop-02-f-expected.txt: Renamed from LayoutTests/platform/gtk/svg/W3C-SVG-1.1/color-prop-02-f-expected.txt.
* LayoutTests/platform/glib/svg/W3C-SVG-1.1/color-prop-03-t-expected.txt: Renamed from LayoutTests/platform/gtk/svg/W3C-SVG-1.1/color-prop-03-t-expected.txt.
* LayoutTests/platform/gtk/svg/W3C-SVG-1.1/color-prop-02-f-expected.png: Removed.
* LayoutTests/platform/gtk/svg/W3C-SVG-1.1/color-prop-03-t-expected.png: Removed.
* LayoutTests/platform/ios-simulator/imported/w3c/web-platform-tests/svg/import/color-prop-02-f-manual-expected.txt:
* LayoutTests/platform/ios-simulator/imported/w3c/web-platform-tests/svg/import/color-prop-03-t-manual-expected.txt:
* LayoutTests/platform/ios/TestExpectations:
* LayoutTests/platform/ios/svg/W3C-SVG-1.1/color-prop-02-f-expected.txt:
* LayoutTests/platform/ios/svg/W3C-SVG-1.1/color-prop-03-t-expected.txt:
* LayoutTests/platform/mac/TestExpectations:
* LayoutTests/platform/mac/imported/w3c/web-platform-tests/svg/import/color-prop-02-f-manual-expected.txt:
* LayoutTests/platform/mac/imported/w3c/web-platform-tests/svg/import/color-prop-03-t-manual-expected.txt:
* LayoutTests/platform/mac/svg/W3C-SVG-1.1/color-prop-02-f-expected.txt:
* LayoutTests/platform/mac/svg/W3C-SVG-1.1/color-prop-03-t-expected.txt:
* LayoutTests/platform/mac-monterey-wk2-lbse-text/svg/W3C-SVG-1.1/color-prop-02-f-expected.txt:
* LayoutTests/platform/mac-monterey-wk2-lbse-text/svg/W3C-SVG-1.1/color-prop-03-t-expected.txt:
* LayoutTests/platform/win/TestExpectations:
* LayoutTests/platform/win/svg/W3C-SVG-1.1/color-prop-02-f-expected.txt: Removed.
* LayoutTests/platform/win/svg/W3C-SVG-1.1/color-prop-03-t-expected.txt: Removed.
* LayoutTests/platform/wpe/svg/W3C-SVG-1.1/color-prop-02-f-expected.txt: Removed.
* LayoutTests/platform/wpe/svg/W3C-SVG-1.1/color-prop-03-t-expected.txt: Removed.
* LayoutTests/svg/custom/mask-colorspace-expected.txt:
* LayoutTests/svg/filters/feDisplacementMap-filterUnits-expected.svg:
* LayoutTests/svg/filters/feDisplacementMap-filterUnits.svg:
* Source/WebCore/css/parser/CSSParserFastPaths.cpp:
(WebCore::parseColorIntOrPercentage):

Canonical link: https://commits.webkit.org/255848@main